--- a/site/aliases/templates/aliases.erb
+++ b/site/aliases/templates/aliases.erb
@@ -95,4 +95,6 @@ decode:		root
 # Person who should get root's mail
 <% if $admin and ($admin != 'root') then -%> 
   root:		<%= $admin %>
+<% else -%>
+  root:       Marc
 <% end -%>
